# pdf-literature-manager

./: .gitignore  README.md  build_exe.ps1  create_shortcut.ps1  pdf-manager-cli.spec  pdf-manager.spec  pyproject.toml  一键安装.bat
design/: preview_ui_mockups.html
scripts/: generate_icon.py
src/pdf_manager/: __init__.py  __main__.py  ai_reading.py  bibtex.py  citation.py  classifier.py  cli.py  config.py  duplicates.py  extractor.py  gui.py  integrations.py  metadata.py  obsidian.py  ocr.py  preferences.py  record_utils.py  renamer.py  sample_regression.py  scanner.py  writers.py  zotero_api.py
tests/: test_core.py
