[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-manager"
version = "0.5.0"
requires-python = ">=3.9"
dependencies = [
    "pymupdf>=1.23",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.scripts]
pdf-manager = "pdf_manager.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
